--- a/index.html
+++ b/index.html
@@ -4,25 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Porfolio personal</title>
+   
     <link rel="stylesheet" href="./formulario.html">
     <link rel="stylesheet" href="./style.css">
-    <title>Porfolio personal</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 
 </head>
 <body>
-
     <header>
-        <h1>Porfolio personal</h1>
-    <nav>
-        <h3> Sobre mi </h3>
-        <h3> Estudios </h3>
-        <h3> contacto </h3>
-    </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Tenth navbar example">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+        
+              <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Roda Sofia Anahi </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"> Sobre mi </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled"> Proyectos </a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false"> Contacto </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
-
     <main>
         <article>
-            <section>
+            <section class = "informacion">
                 <p>
                     Mi nombre es <b> Sofia  Anahi Roda </b> comence en el mundo de la programacion en el año 2023, gracias a la recomendacion 
                     de un amigo cercano. Es un mundo increible e interesante, por lo tanto, recomiendo que la persona tiene aunque sea una pequeño
