se modifico el index.html y se cambio el nombre del style por index.css

--- a/formulario.html
+++ b/formulario.html
@@ -32,6 +32,9 @@
         <label> Correo Electronico </label>
         <input type="text" placeholder="ingrese su respuesta" /> <br />
 
+        <label>Contraseña</label>
+        <input type="password" placeholder="ingrese su respuesta" /> <br />
+
         <p>Elija sobre el idioma que usted conoce</p>
 
         <label> Nivel de conocimiento del Ingles </label> <br />
