se modifico el index.css y se crearon varios divs

--- a/index.html
+++ b/index.html
@@ -13,19 +13,31 @@
 
 
 </head>
-<body>
+<body class = "body">
       <header>
-        <nav>
-            <ul>
-                <li>Sobre mi</li>
-                <li>Proyectos</li>
-                <li>Contactos</li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
+          <a class="navbar-brand col-lg-3 me-0" href="#">Roda Sofia Anahi</a>
+          <ul class="navbar-nav col-lg-6 justify-content-lg-center">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Contactos</a>
+            </li>
+            <li class = "nav-item"></li>
+            <a class = "nav-link">Sobre Mi</a>
+          </ul>
+      </div>
+    </nav>
     </header>
-   
-        <div class = "imagen">
-            <img src="https://depor.com/resizer/A0dgVMme9ikVFocysmrmWNWdu14=/1200x800/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/KZWXP7XELJE4PGKPJGNMZKZAGM.jpg" alt="luffy">
+        <div class = "img">
+            <img class = "imagen" src="./WhatsApp Image 2023-05-09 at 8.28.26 PM.jpeg" alt="mi foto">
         </div>
       <main>
         <article>
@@ -37,6 +49,7 @@
                     de un amigo cercano. Es un mundo increible e interesante, por lo tanto, recomiendo que la persona tiene aunque sea una pequeño interes, que lo intente y creanme que no se van arrepentir.   
                 </p>
             </section>
+            <div class = "programacion">
             <section>
                 <p>
                     Mi recomendacion para las personas que comenzaron el mundo de la programacion,comiencen con tutoriales basicos para entender 
@@ -52,7 +65,7 @@
                         Videos de JavaScript
                     </li>
                 </ol>
-                    
+              </div>      
             </section>
             </div>
 
@@ -65,10 +78,11 @@
                     no se procupen, pueden ingresar a esta pagina que tiene recomendaciones de videos de ingles.
                 </P>
                 <p>
-                    Para ingresar a la pagina, haga click en el boton.
+                    Para registarte a la pagina, haga click en el boton.
                 </p>
-                <button> Click aqui </button>  
-                
+                <form action="./formulario.html">
+                <button class = "button"> Click aqui </button>  
+                </form>
             </section>
         </article>
         </div>
