se agrego dos archivo de css, una imagen, y se modificaron los index.

--- a/formulario.html
+++ b/formulario.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./formulario.css" />
     <link rel="stylesheet" href="./index.html" />
     <title>Formulario</title>
   </head>
-  <body>
-    <header>
-      <h1>Formulario</h1>
-    </header>
-
-    <main>
+  <body class="body">
+    <main class="main">
+      <h1 class="h1">Formulario</h1>
       <form>
-        <h3>Bienvenidos a Language Online</h3>
+        <h3 class="h3">Bienvenidos a Language Online</h3>
 
         <label> Nombre </label>
         <input type="text" placeholder="ingrese su respuesta" /> <br />
@@ -31,9 +28,6 @@
 
         <label> Correo Electronico </label>
         <input type="text" placeholder="ingrese su respuesta" /> <br />
-
-        <label>Contraseña</label>
-        <input type="password" placeholder="ingrese su respuesta" /> <br />
 
         <p>Elija sobre el idioma que usted conoce</p>
 
@@ -58,15 +52,8 @@
         <input type="checkbox" /> Nivel basico-intermedio <br />
         <input type="checkbox" /> Nivel avanzado <br />
       </form>
+      <button class="button"><a href="./languege.html"> Enviar</a></button>
     </main>
-
-    <button>Enviar</button>
-
-    <aside>
-      <section>¡Estudia idioma en otro pais!</section>
-      <section>¡Viaja por todo el mundo!</section>
-    </aside>
-
-    <footer>&copy; Roda Sofia Anahi 2023</footer>
+    <footer class="footer">&copy; Roda Sofia Anahi 2023</footer>
   </body>
 </html>
