--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         <div class = "img">
             <img class = "imagen" src="./WhatsApp Image 2023-05-09 at 8.28.26 PM.jpeg" alt="mi foto">
         </div>
+        
       <main>
-        <article>
-            <div class = "conteinter">
+        <div class = "conteinter">
+        <!-- <article class = "conteinter"> -->
             <div class = "portfolio">
             <section>
                 <p>
@@ -49,6 +50,7 @@
                     de un amigo cercano. Es un mundo increible e interesante, por lo tanto, recomiendo que la persona tiene aunque sea una pequeño interes, que lo intente y creanme que no se van arrepentir.   
                 </p>
             </section>
+            </div>
             <div class = "programacion">
             <section>
                 <p>
@@ -65,13 +67,11 @@
                         Videos de JavaScript
                     </li>
                 </ol>
-              </div>      
             </section>
             </div>
 
             <div class = "idioma">
             <section>
-
                 <P>
                     Para la ultima recomendacion, Les aconsejo que comiencen a estudiar idiomas, el mas importante el ingles, ya que todo lo que
                     tiene que ver con la programacion esta en ese idioma, mejor si comienzan en un instituto pero si no tienen esas posiblidades 
@@ -84,12 +84,12 @@
                 <button class = "button"> Click aqui </button>  
                 </form>
             </section>
-        </article>
-        </div>
+            </div>
+        <!-- </article> -->
         </div>
     </main>
 
-    <aside>
+    <aside class = "aside">
         <section class = "lugares">
             <p> 
                 Lugares donde podes estudiar en formosa:
@@ -105,9 +105,9 @@
                 Personas que estudiaron la carrera de Programacion.
             </p>
             <ol>
-                <li> </li>
-                <li> </li>
-                <li> </li>
+                <li> Bill Gates</li>
+                <li> Ada Lovelace </li>
+                <li> Dennis Ritchie </li>
             </ol>
         </section>
         
