--- a/languege.html
+++ b/languege.html
@@ -5,57 +5,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./formulario.html" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./languege.css" />
     <link rel="stylesheet" href="./index.html" />
     <title>Languege Online</title>
   </head>
-  <body>
-    <header>
-      <nav></nav>
-    </header>
+  <body class="body">
+    <h1 class="h1">Bienvenidos a Lenguage Online</h1>
+    <main class="main">
+      <section class="sec1">
+        <p>
+          Bienvenidos a Lenguage Online para aprender sobre Ingles, Portugues o
+          Aleman, para aprender no tienen que tener un conocimiento previo todo
+          lo pueden aprender aqui, desde lo mas basico hasta lo mas avanzado,
+          solo necesitamos que pongas todas las ganas del mundo para avanzar en
+          el mundo del idioma.
+        </p>
+      </section>
 
-    <main>
-      <h1>Bienvenidos a Lenguage Online</h1>
-      <article>
-        <section>
-          <p>
-            Bienvenidos a Lenguage Online para aprender sobre Ingles, Portugues
-            o Aleman, para aprender no tienen que tener un conocimiento previo
-            todo lo pueden aprender aqui, desde lo mas basico hasta lo mas
-            avanzado, solo necesitamos que pongas todas las ganas del mundo para
-            avanzar en el mundo del idioma.
-          </p>
-        </section>
-
-        <section>
-          <h3>En esta seccion tenemos videos para el nivel que eligiste!</h3>
+      <div class="section">
+        <section class="sec2">
+          <h3 class="nivel">
+            En esta seccion tenemos videos para el nivel que eligiste!
+          </h3>
 
           <p>Eligiste el idioma Ingles</p>
           <ol>
-            <li>Nivel basico</li>
-            <li>Nivel basico basico-intermedio</li>
-            <li>Nivel avanzado</li>
+            <li>
+              Nivel basico ->
+              <a href="https://www.youtube.com/watch?v=l0Xtt9WpHVY">video </a>
+            </li>
+            <li>
+              Nivel basico basico-intermedio ->
+              <a href="https://www.youtube.com/watch?v=RlR4_98T4Yo"> video </a>
+            </li>
+            <li>
+              Nivel avanzado ->
+              <a href="https://www.youtube.com/watch?v=8UUsGGwrNCY"> video </a>
+            </li>
           </ol>
 
           <p>Eligiste el idioma Portugues</p>
           <ol>
-            <li>Nivel basico</li>
-            <li>Nivel basico basico-intermedio</li>
-            <li>Nivel avanzado</li>
+            <li>
+              Nivel basico ->
+              <a href="https://www.youtube.com/watch?v=cwY85S1O0vk"> video </a>
+            </li>
+            <li>
+              Nivel basico basico-intermedio ->
+              <a
+                href="https://www.youtube.com/watch?v=TyiAN14pmVE&list=PLgXzk50PHvvWnAdIwWz0n4vWF6DJUsSX9"
+              >
+                video</a
+              >
+            </li>
+            <li>
+              Nivel avanzado ->
+              <a href="https://www.youtube.com/watch?v=Fqiwdnhz6qs">video</a>
+            </li>
           </ol>
 
           <p>Eligiste el idioma Aleman</p>
           <ol>
-            <li>Nivel basico</li>
-            <li>Nivel basico basico-intermedio</li>
-            <li>Nivel avanzado</li>
+            <li>
+              Nivel basico ->
+              <a href="https://www.youtube.com/watch?v=StzJE5lrhcI">video</a>
+            </li>
+            <li>
+              Nivel basico basico-intermedio ->
+              <a
+                href="https://www.youtube.com/watch?v=Ymyfu0JiNnk&list=PLsCnWPFMDiEVkBbbTGz8hHWEKHDNuJCCz"
+              >
+                video
+              </a>
+            </li>
+            <li>
+              Nivel avanzado ->
+              <a
+                href="https://www.youtube.com/watch?v=GasZD0mG6ig&list=PLKO5AD4LxHkGfKn17TzZ3lCgttf9WU1MA"
+                >video</a
+              >
+            </li>
           </ol>
         </section>
-        <section>
-          <h3>Otra opcion para aprender idioma</h3>
+        <section class="sec3">
+          <h3 class="idioma">Otra opcion para aprender idioma</h3>
 
           <p>
             <b> Aprender idiomas con juegos </b> <br />
+            <br />
 
             Puedes aprender idiomas mientras te diviertes con juegos y chistes.
             Encontrarás juegos para todos los gustos que te ayudarán a practicar
@@ -63,7 +100,8 @@
             disfrutar y aprender a la vez… y que luego podrás contar. <br />
             <br />
 
-            <b> Aprender inglés con audio y vídeo </b>
+            <b> Aprender inglés con audio y vídeo </b> <br />
+            <br />
 
             Tenemos infinidad de audios y vídeos para practicar inglés: podcasts
             con relatos, una audionovela una serie de televisión para la
@@ -74,6 +112,7 @@
 
           <p>
             <b>Aprender idiomas con aplicaciones </b> <br />
+            <br />
 
             Duolingo es una plataforma web creada por el guatemalteco Luis Von
             Ahn en Estados Unidos destinada al aprendizaje gratuito de idiomas y
@@ -83,14 +122,8 @@
             portugués, italiano, catalán, esperanto, guaraní, sueco y ruso.
           </p>
         </section>
-      </article>
+      </div>
     </main>
-
-    <aside>
-      <section></section>
-      <section></section>
-    </aside>
-
-    <footer>&copy; Roda Sofia Anahi 2023</footer>
+    <footer class="footer">&copy; Roda Sofia Anahi 2023</footer>
   </body>
 </html>
