se modifico el index.css y formulario.css

--- a/formulario.html
+++ b/formulario.html
@@ -10,49 +10,51 @@
   </head>
   <body class="body">
     <main class="main">
-      <h1 class="h1">Formulario</h1>
-      <form>
-        <h3 class="h3">Bienvenidos a Language Online</h3>
+      <fieldset>
+        <h1 class="h1">Formulario</h1>
+        <form>
+          <h3 class="h3">Bienvenidos a Language Online</h3>
 
-        <label> Nombre </label>
-        <input type="text" placeholder="ingrese su respuesta" /> <br />
+          <label> Nombre </label>
+          <input type="text" placeholder="ingrese su respuesta" /> <br />
 
-        <label> Apellido </label>
-        <input type="text" placeholder="ingrese su respuesta" /> <br />
+          <label> Apellido </label>
+          <input type="text" placeholder="ingrese su respuesta" /> <br />
 
-        <label> Edad </label>
-        <input type="number" placeholder="ingrese su respuesta" /> <br />
+          <label> Edad </label>
+          <input type="number" placeholder="ingrese su respuesta" /> <br />
 
-        <label> DNI </label>
-        <input type="number" placeholder="ingrese su respuesta" /> <br />
+          <label> DNI </label>
+          <input type="number" placeholder="ingrese su respuesta" /> <br />
 
-        <label> Correo Electronico </label>
-        <input type="text" placeholder="ingrese su respuesta" /> <br />
+          <label> Correo Electronico </label>
+          <input type="text" placeholder="ingrese su respuesta" /> <br />
 
-        <p>Elija sobre el idioma que usted conoce</p>
+          <p>Elija sobre el idioma que usted conoce</p>
 
-        <label> Nivel de conocimiento del Ingles </label> <br />
+          <label> Nivel de conocimiento del Ingles </label> <br />
 
-        <input type="checkbox" /> No tengo <br />
-        <input type="checkbox" /> Nivel basico <br />
-        <input type="checkbox" /> Nivel basico-intermedio <br />
-        <input type="checkbox" /> Nivel avanzado <br />
+          <input type="checkbox" /> No tengo <br />
+          <input type="checkbox" /> Nivel basico <br />
+          <input type="checkbox" /> Nivel basico-intermedio <br />
+          <input type="checkbox" /> Nivel avanzado <br />
 
-        <label> Nivel de conocimiento del Portugués </label> <br />
+          <label> Nivel de conocimiento del Portugués </label> <br />
 
-        <input type="checkbox" /> No tengo <br />
-        <input type="checkbox" /> Nivel basico <br />
-        <input type="checkbox" /> Nivel basico-intermedio <br />
-        <input type="checkbox" /> Nivel avanzado <br />
+          <input type="checkbox" /> No tengo <br />
+          <input type="checkbox" /> Nivel basico <br />
+          <input type="checkbox" /> Nivel basico-intermedio <br />
+          <input type="checkbox" /> Nivel avanzado <br />
 
-        <label> Nivel de conocimiento del Aleman </label> <br />
+          <label> Nivel de conocimiento del Aleman </label> <br />
 
-        <input type="checkbox" /> No tengo <br />
-        <input type="checkbox" /> Nivel basico <br />
-        <input type="checkbox" /> Nivel basico-intermedio <br />
-        <input type="checkbox" /> Nivel avanzado <br />
-      </form>
-      <button class="button"><a href="./languege.html"> Enviar</a></button>
+          <input type="checkbox" /> No tengo <br />
+          <input type="checkbox" /> Nivel basico <br />
+          <input type="checkbox" /> Nivel basico-intermedio <br />
+          <input type="checkbox" /> Nivel avanzado <br />
+          <button class="button"><a href="./languege.html"> Enviar</a></button>
+        </form>
+      </fieldset>
     </main>
     <footer class="footer">&copy; Roda Sofia Anahi 2023</footer>
   </body>
