--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <main>
         <div class = "conteinter">
         <!-- <article class = "conteinter"> -->
-            <div class = "portfolio">
+            <div class = "carta">
             <section>
                 <p>
                     Mi nombre es <b> Sofia  Anahi Roda </b> comence en el mundo de la programacion en el año 2023, gracias a la recomendacion 
@@ -51,7 +51,7 @@
                 </p>
             </section>
             </div>
-            <div class = "programacion">
+            <div class = "carta">
             <section>
                 <p>
                     Mi recomendacion para las personas que comenzaron el mundo de la programacion,comiencen con tutoriales basicos para entender 
@@ -70,7 +70,7 @@
             </section>
             </div>
 
-            <div class = "idioma">
+            <div class = "carta">
             <section>
                 <P>
                     Para la ultima recomendacion, Les aconsejo que comiencen a estudiar idiomas, el mas importante el ingles, ya que todo lo que
@@ -90,7 +90,7 @@
     </main>
 
     <aside class = "aside">
-        <section class = "lugares">
+        <section class = "carta">
             <p> 
                 Lugares donde podes estudiar en formosa:
                 <ol>
@@ -100,7 +100,7 @@
                 </ol>
             </p>
         </section>
-        <section class = "carrera">
+        <section class = "carta">
             <p>
                 Personas que estudiaron la carrera de Programacion.
             </p>
