se modifico el index.css y formulario.css

--- a/languege.html
+++ b/languege.html
@@ -11,6 +11,8 @@
   </head>
   <body class="body">
     <h1 class="h1">Bienvenidos a Lenguage Online</h1>
+
+    <button class="button"><a href="./index.html">inicio</a></button>
     <main class="main">
       <section class="sec1">
         <p>
