--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a class="navbar-brand col-lg-3 me-0" href="#">Roda Sofia Anahi</a>
           <ul class="navbar-nav col-lg-6 justify-content-lg-center">
             <li class="nav-item">
-              <a class="nav-link" href="#">Proyectos</a>
+              <a class="nav-link" href="./languege.html">Proyectos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link">Contactos</a>
